--- a/jywTabBar/jywTabBar/jywView/tableView/JYW_AddressBookViewController.xib
+++ b/jywTabBar/jywTabBar/jywView/tableView/JYW_AddressBookViewController.xib
@@ -28,11 +28,12 @@
                         <outlet property="delegate" destination="-1" id="lTc-9W-fUT"/>
                     </connections>
                 </tableView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cCb-37-9sJ" userLabel="letterTableView">
-                    <rect key="frame" x="374" y="44" width="40" height="818"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cCb-37-9sJ" userLabel="letterTableView">
+                    <rect key="frame" x="384" y="178" width="20" height="540"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="40" id="plR-2m-75b"/>
+                        <constraint firstAttribute="height" constant="540" id="HIg-ad-Ycc"/>
+                        <constraint firstAttribute="width" constant="20" id="plR-2m-75b"/>
                     </constraints>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="g1H-5s-MIs"/>
@@ -42,13 +43,12 @@
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
+                <constraint firstItem="cCb-37-9sJ" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="B5r-PY-wLA"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="UDD-00-yMQ" secondAttribute="trailing" id="Hnd-ZF-5nY"/>
-                <constraint firstItem="cCb-37-9sJ" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="PFG-eI-PCX"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="UDD-00-yMQ" secondAttribute="bottom" id="VXk-3D-5bx"/>
                 <constraint firstItem="UDD-00-yMQ" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="WiS-mY-4CV"/>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="cCb-37-9sJ" secondAttribute="trailing" id="j8m-SV-Kw8"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="cCb-37-9sJ" secondAttribute="trailing" constant="10" id="j8m-SV-Kw8"/>
                 <constraint firstItem="UDD-00-yMQ" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="obK-CP-smT"/>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="cCb-37-9sJ" secondAttribute="bottom" id="wHW-4o-h61"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="139" y="81"/>
